[gd_scene load_steps=3 format=3 uid="uid://18q6hop7c14w"]

[ext_resource type="Script" path="res://menus/game_over_screen/game_over_screen.gd" id="1_g1jjk"]
[ext_resource type="AudioStream" uid="uid://kw2dqfc0a4kh" path="res://audio/game_over.mp3" id="2_xm80j"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1jjk")

[node name="TryAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 1024.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 48
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 1024.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 48
text = "Main Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 768.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 139.0
offset_right = 768.0
offset_bottom = 267.0
theme_override_font_sizes/font_size = 48
text = "Final Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xm80j")
autoplay = true

[connection signal="pressed" from="TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
